[package]
name = "cofiblocks-contract"
version = "0.1.0"
edition = "2021"
authors = ["The Vagabonds Labs team <info@vagabondslabs.com>"]
homepage = "https://vagabondslabs.com"
repository = "https://github.com/Vagabonds-Labs/marketplace"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["vagabondlabs", "cryptocurrency", "blockchain"]

[dependencies]
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome/" }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rpassword = "7.2"
serde = "1.0"
sha2 = "0.10"
starknet = "0.9"
thiserror = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
toml = "0.8"